[package]
name = ""
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
exitfailure = "0.5.1"
reqwest = { version = "0.11.6", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"
base64 = "0.13.0"
ring = "0.16.20"
chrono = "0.4.19"
chrono-tz = "0.6.0"